--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -252,3 +252,21 @@
         margin-top: 20px;
     }
 }
+.mm-link-field {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.mm-link-field input.regular-text {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.mm-link-field .mm-remove-link-button {
+    flex-shrink: 0;
+}
+
+#mm-add-link-button {
+    margin-top: 10px;
+}
