--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -68,7 +68,9 @@
 
 /* Buttons */
 .mm-upload-button,
-.mm-remove-button {
+.mm-remove-button,
+.mm-reset-stats-button,
+.mm-download-stats-button {
     margin-top: 10px;
     margin-right: 10px;
     background-color: #6D727D;
@@ -82,7 +84,9 @@
 }
 
 .mm-upload-button:hover,
-.mm-remove-button:hover {
+.mm-remove-button:hover,
+.mm-reset-stats-button:hover,
+.mm-download-stats-button:hover {
     background-color: #90939C;
 }
 
@@ -287,4 +291,16 @@
     font-size: 14px;
     color: #B0B5BD;
     margin-top: 10px;
+}
+
+/* Statistics Chart */
+.mm-stats-chart {
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+}
+
+/* Buttons in Statistics Tab */
+.mm-stats-buttons {
+    margin-top: 20px;
 }
